--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.DdJsG_00.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?28503403-14e9-42f7-80e4-dc663d6d087e">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-d_5gGkx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B4BRJ2G1.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CkIFlfrK.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?78b1e55c-7ecf-4708-831c-ce8b11f34cfb">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CWSyFVps.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CySwzLwD.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CgdNaA4D.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/aXLWxEM0.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/QhO6HEXm.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C_GCVOIY.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D23pfA7B.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DyYrT8zR.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B2z68Rka.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C0tzbyAT.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cuyir6k-.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BGTAXVf6.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DQpHBcEl.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D4Da44gN.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bv0WjwhX.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C2b_VZJo.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dx4LCdcL.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/-d_5gGkx.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?28503403-14e9-42f7-80e4-dc663d6d087e">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736136047434]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"28503403-14e9-42f7-80e4-dc663d6d087e",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CWSyFVps.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?78b1e55c-7ecf-4708-831c-ce8b11f34cfb">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736136154700]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"78b1e55c-7ecf-4708-831c-ce8b11f34cfb",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
