--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.DdJsG_00.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?6f086fde-a59e-40d4-ab92-0281d9cd19ef">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DZ2QRVTB.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DNWT8Bd_.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DCso74Oo.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?adcdb107-7fb1-47b8-a055-54531c063b4e">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-d_5gGkx.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B4BRJ2G1.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CkIFlfrK.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/VHdbjmIq.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DRf-Lzv4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B0ASaUA-.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BDxgHo-U.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dxf7pyKW.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DXdZMdpg.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/suwWOFgs.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/aXLWxEM0.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/QhO6HEXm.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C_GCVOIY.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D23pfA7B.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DyYrT8zR.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B2z68Rka.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C0tzbyAT.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DZ2QRVTB.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?6f086fde-a59e-40d4-ab92-0281d9cd19ef">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736136275085]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"6f086fde-a59e-40d4-ab92-0281d9cd19ef",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/-d_5gGkx.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?adcdb107-7fb1-47b8-a055-54531c063b4e">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736136388552]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"adcdb107-7fb1-47b8-a055-54531c063b4e",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
