--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.DdJsG_00.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?adcdb107-7fb1-47b8-a055-54531c063b4e">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-d_5gGkx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CoDjmvId.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CkIFlfrK.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/QhO6HEXm.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/aXLWxEM0.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BFirzJTr.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DyYrT8zR.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B2z68Rka.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C0tzbyAT.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?71600988-4575-4226-91ff-799b735d42fc">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Djgg-37Q.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CzNym1bQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DAnnM2xH.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DOl2vnsQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CyjET_NQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B1Vv1Jqz.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DmcIV1AG.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/HhLuYFt8.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/gsOYk4Kw.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/-d_5gGkx.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?adcdb107-7fb1-47b8-a055-54531c063b4e">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736136388550]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"adcdb107-7fb1-47b8-a055-54531c063b4e",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/Djgg-37Q.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?71600988-4575-4226-91ff-799b735d42fc">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736136486126]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"71600988-4575-4226-91ff-799b735d42fc",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
