--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?147bd101-04e1-4549-b570-2ec9c7dd14b4">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CL_rVj4U.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bhi_TK6w.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/F1ZQXfj9.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?7679b176-2011-4399-990c-41a5a11c1120">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CzHSlCTR.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/3-grTvF7.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DOy55SWV.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DqxcthpW.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CMhNC_Dl.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CxhdT_qx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CRTDbuZG.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DaGVuW_O.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/kvSKRU7U.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dr4bKUAz.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CKJki5Sp.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/lS7zba-Z.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BsA3kbOU.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BuUeqDMV.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BQLkKPag.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DCdaoy3c.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C3QofmYj.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CL_rVj4U.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?147bd101-04e1-4549-b570-2ec9c7dd14b4">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736137172775]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"147bd101-04e1-4549-b570-2ec9c7dd14b4",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CzHSlCTR.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?7679b176-2011-4399-990c-41a5a11c1120">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736137348553]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7679b176-2011-4399-990c-41a5a11c1120",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
