--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.BnCcm2xy.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?fa9c9c43-da6b-41ec-9436-e97290f4f62c">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Y68y6ZtI.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BFYc7WVx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/UN5hV-8-.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?2c49cde7-01a4-4fe1-8bc4-2d02eba5ca9b">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BPEUKgxQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ow-_7WdR.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/6vcBg9hZ.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DGtBCOEM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CqpvGQmI.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Ce_fzVAY.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ChemKVTf.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dr75IL3Z.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BzcTe4cO.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/V4feVBaI.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CRdnQ8TM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/De1emYB1.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BqmT0Brw.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Byh2pZnW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B5oe5Jx5.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CA4MXVN5.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CKzK6CpL.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/Y68y6ZtI.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?fa9c9c43-da6b-41ec-9436-e97290f4f62c">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736219323234]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"fa9c9c43-da6b-41ec-9436-e97290f4f62c",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BPEUKgxQ.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?2c49cde7-01a4-4fe1-8bc4-2d02eba5ca9b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736219498515]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"2c49cde7-01a4-4fe1-8bc4-2d02eba5ca9b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
