--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,21 +7,21 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.ni74yQ3_.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?74ffdf44-d092-48d4-9e9a-84d6bde1f62b">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_Dm8eiao.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D_zIouvX.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dd0isdgL.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-85s7dYx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/HEdOnVvq.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CQSBLJTU.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B26P9scV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dhpv0C3z.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B9yOiBWg.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BT-YAgyU.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?dbded573-383d-4fd1-af1e-59fe1cd04847">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BuByME5Q.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CJxU08hR.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CJfGZZ0H.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CM4ZWcsN.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/HPREK8t1.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CVSnT0PI.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bna3rCb0.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DBnv37zN.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BkKcweQ9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/w8lep_LU.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/_Dm8eiao.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?74ffdf44-d092-48d4-9e9a-84d6bde1f62b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736495665782]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"74ffdf44-d092-48d4-9e9a-84d6bde1f62b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BuByME5Q.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?dbded573-383d-4fd1-af1e-59fe1cd04847">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736496297272]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"dbded573-383d-4fd1-af1e-59fe1cd04847",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
