--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.ni74yQ3_.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?74ffdf44-d092-48d4-9e9a-84d6bde1f62b">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_Dm8eiao.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C88kL6GF.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dd0isdgL.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?dbded573-383d-4fd1-af1e-59fe1cd04847">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BuByME5Q.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DR3O7PrL.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CJfGZZ0H.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/HEdOnVvq.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-85s7dYx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DqN6n4JP.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/COWvmKd8.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B26P9scV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dhpv0C3z.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B9yOiBWg.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BT-YAgyU.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/HPREK8t1.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CM4ZWcsN.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bm21NwFr.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bbsbev7J.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bna3rCb0.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DBnv37zN.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BkKcweQ9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/w8lep_LU.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/_Dm8eiao.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?74ffdf44-d092-48d4-9e9a-84d6bde1f62b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736495665784]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"74ffdf44-d092-48d4-9e9a-84d6bde1f62b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BuByME5Q.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?dbded573-383d-4fd1-af1e-59fe1cd04847">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736496297277]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"dbded573-383d-4fd1-af1e-59fe1cd04847",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
