--- a/about/index.html
+++ b/about/index.html
@@ -7,22 +7,22 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.DjroCB-m.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?faaa6bce-1a33-4816-8c23-82319eb6d88f">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BpWNhz74.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CJVEZ_UE.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B_ZdeQ7e.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CMNUw_tC.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/xsFqA0FL.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/jVSibM6d.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B_WAjrYe.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BPigkg0b.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DYQXcfV9.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/bfot96_T.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/HmWxjZ1t.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?2b11f444-9566-4e9b-9652-f35ce544fccc">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/MuGVkTS7.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BquXKlCh.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CXYkFlm_.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BjruOfx0.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DFFuluUy.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dpl9lYGk.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ChGGNKXs.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BtF0N3M2.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BRlG9LH-.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/62XbExCt.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSQUGhCr.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/BpWNhz74.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?faaa6bce-1a33-4816-8c23-82319eb6d88f">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736673429090]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"faaa6bce-1a33-4816-8c23-82319eb6d88f",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/MuGVkTS7.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?2b11f444-9566-4e9b-9652-f35ce544fccc">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736673633962]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"2b11f444-9566-4e9b-9652-f35ce544fccc",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
